# hormuz-tectonochemical-engine

./: .env.example  .gitignore  CITATION.cff  Dockerfile  README.md
code/: README.md  pyproject.toml  requirements-tf-linux-windows.txt  requirements-tf-macos.txt  requirements.txt
code/hormuz_tectonochemical_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
code/mcp_server/: __init__.py  server.py  tools.py
code/scripts/: bootstrap_mcp_host.py  check_tensorflow_backend.py  deploy_remote_mcp.sh  generate_aligned_dataset.py  generate_oauth_approval_password_hash.py  host_doctor.py  rebuild_outputs.py
code/src/hte/: __init__.py  artifact_publisher.py  audit.py  backends.py  calibration.py  cli.py  config.py  dataset.py  evidence.py  mcp_app.py  mcp_runtime.py  mcp_tools.py  model.py  oauth.py  optimization.py  paths.py  provenance.py  safety.py  types.py  validation.py
code/src/hte/web/: authorize.html
code/tests/: test_artifact_publisher.py  test_audit.py  test_calibration_resilience.py  test_evidence.py  test_mcp_runtime.py  test_mcp_tools.py  test_oauth_ui.py  test_regime_resilience.py  test_safety.py
data/: aligned_hormuz_benchmark.csv  source_manifest.json
docs/: CALIBRATION_WORKFLOW.md  MCP_SETUP.md
paper/: paper.tex
results/: artifact_manifest.json  holdout_predictions_lb12_hz1_u128-96-64.csv  holdout_predictions_lb6_hz1_u32-24-16.csv  horizon_forecast_lb12_hz1_u128-96-64.json  horizon_forecast_lb6_hz1_u32-24-16.json  model_metrics_lb12_hz1_u128-96-64.json  model_metrics_lb6_hz1_u32-24-16.json  (+6 more)
(+5 files in other folders)
